# yuaiserver

./: Cargo.toml  README.md  auth.rs  blacklist.rs  cert.pem  config.toml  handlers.rs  key.pem  main.rs  readme.md
src/: adapters.rs  console.rs  gui.rs  kgb.rs  logging.rs  main.rs  maintenance.rs  routing.rs  servers.rs  setup.rs  tls.rs  webrtc.rs  websocket.rs
