[package]
name = "yuaiserver"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.0", features = ["http1", "http2", "server"] }
tokio = { version = "1.0", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "1.0"
hyper-util = { version = "0.1.10", features = ["server", "server-auto"] }
dashmap = "5.0"
jsonwebtoken = "8.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
quinn = "0.11"
webrtc = "0.9.0"
futures = "0.3"
tokio-rustls = "0.26"
hyper-tungstenite = "0.14"
http-body-util = "0.1"
webrtc-dtls = "0.9.0"
webrtc-ice = "0.10.1"
webrtc-util = "0.8.1"
x25519-dalek = "2.0.1"

[profile.release]
opt-level = "z"  # Минимальный размер кода
lto = true       # Link Time Optimization (оптимизация при линковке)
strip = true     # Убираем символы отладки (Cargo 1.60+)
panic = "abort"  # Отключаем unwinding
codegen-units = 1 # Улучшает оптимизацию, но увеличивает время компиляции
