[package]
name = "yuaiserver"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
hyper-tungstenite = "0.15.0"
rustls = "0.23"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
dashmap = "6.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
quinn = "0.11" 
h3 = "0.0.7"
h3-quinn = "0.0.9" 
bytes = "1.0"
http-body-util = "0.1"
webrtc = "0.9"
futures = "0.3"
colored = "3"

[profile.release]
opt-level = "z"  # Минимальный размер кода
lto = true       # Link Time Optimization (оптимизация при линковке)
strip = true     # Убираем символы отладки (Cargo 1.60+)
panic = "abort"  # Отключаем unwinding
codegen-units = 1 # Улучшает оптимизацию, но увеличивает время компиляции
